# orangepi-zero3-u8g2-i2c

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.vim/: coc-settings.json
i2c-tools/: Makefile
include/: linux-i2c.h
src/: linux-i2c.c  main.c
